{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 26,
  "lineage": "f4d5029b-85b5-b410-34df-b5a1580553e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4a6e4c21a868fb4",
            "arn": "arn:aws:ec2:us-west-2:979188186972:elastic-ip/eipalloc-0b4a6e4c21a868fb4",
            "domain": "vpc",
            "id": "eipalloc-0b4a6e4c21a868fb4",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-165-209-70.us-west-2.compute.amazonaws.com",
            "public_ip": "35.165.209.70",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-NAT-EIP",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-NAT-EIP",
              "Project": "Unity"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:internet-gateway/igw-0d487785c1302d5a6",
            "id": "igw-0d487785c1302d5a6",
            "owner_id": "979188186972",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-IGW",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-IGW",
              "Project": "Unity"
            },
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4a6e4c21a868fb4",
            "association_id": "eipassoc-0238dd27fabdd8031",
            "connectivity_type": "public",
            "id": "nat-011f2d082b4a65666",
            "network_interface_id": "eni-076b2efeb61790323",
            "private_ip": "10.52.11.12",
            "public_ip": "35.165.209.70",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ba09be444f1a3be4",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-NAT",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-NAT",
              "Project": "Unity"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.nat_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:route-table/rtb-07dcad2dfd64fd463",
            "id": "rtb-07dcad2dfd64fd463",
            "owner_id": "979188186972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d487785c1302d5a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-NAT-Gateway-RT",
              "Network": "Public",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-NAT-Gateway-RT",
              "Network": "Public",
              "Project": "Unity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:route-table/rtb-00e8ba8f033871d37",
            "id": "rtb-00e8ba8f033871d37",
            "owner_id": "979188186972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-011f2d082b4a65666",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Private-RT-AZ1",
              "Network": "Private AZ1",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Private-RT-AZ1",
              "Network": "Private AZ1",
              "Project": "Unity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.nat_gateway",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:route-table/rtb-040833f470d742920",
            "id": "rtb-040833f470d742920",
            "owner_id": "979188186972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-011f2d082b4a65666",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Private-RT-AZ2",
              "Network": "Private AZ2",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Private-RT-AZ2",
              "Network": "Private AZ2",
              "Project": "Unity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.nat_gateway",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:route-table/rtb-07f21adf632394e67",
            "id": "rtb-07f21adf632394e67",
            "owner_id": "979188186972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-011f2d082b4a65666",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Private-RT-AZ3",
              "Network": "Private AZ3",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Private-RT-AZ3",
              "Network": "Private AZ3",
              "Project": "Unity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.nat_gateway",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:route-table/rtb-0c12576c2588c9c27",
            "id": "rtb-0c12576c2588c9c27",
            "owner_id": "979188186972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-011f2d082b4a65666",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Private-RT-AZ4",
              "Network": "Private AZ4",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Private-RT-AZ4",
              "Network": "Private AZ4",
              "Project": "Unity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.nat_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:route-table/rtb-04a445b289c2e2e56",
            "id": "rtb-04a445b289c2e2e56",
            "owner_id": "979188186972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d487785c1302d5a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Public-RT-AZ1",
              "Network": "Public AZ1",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Public-RT-AZ1",
              "Network": "Public AZ1",
              "Project": "Unity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:route-table/rtb-0b663425eeb701116",
            "id": "rtb-0b663425eeb701116",
            "owner_id": "979188186972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d487785c1302d5a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Public-RT-AZ2",
              "Network": "Public AZ2",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Public-RT-AZ2",
              "Network": "Public AZ2",
              "Project": "Unity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:route-table/rtb-079bca8d907ff6723",
            "id": "rtb-079bca8d907ff6723",
            "owner_id": "979188186972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d487785c1302d5a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Public-RT-AZ3",
              "Network": "Public AZ3",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Public-RT-AZ3",
              "Network": "Public AZ3",
              "Project": "Unity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:route-table/rtb-077cc6b30507aaa90",
            "id": "rtb-077cc6b30507aaa90",
            "owner_id": "979188186972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d487785c1302d5a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Public-RT-AZ4",
              "Network": "Public AZ4",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Public-RT-AZ4",
              "Network": "Public AZ4",
              "Project": "Unity"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd827f97147f894f",
            "route_table_id": "rtb-07dcad2dfd64fd463",
            "subnet_id": "subnet-0ba09be444f1a3be4"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.nat_gateway",
            "aws_subnet.nat_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:subnet/subnet-0ba09be444f1a3be4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.52.11.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba09be444f1a3be4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979188186972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-NAT-Gateway-Subnet",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-NAT-Gateway-Subnet",
              "Project": "Unity"
            },
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:subnet/subnet-0b6bb87de750f3241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.52.10.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6bb87de750f3241",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979188186972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Priv-Subnet-1",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Priv-Subnet-1",
              "Project": "Unity"
            },
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:subnet/subnet-0776bff97794b5782",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.52.10.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0776bff97794b5782",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979188186972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Priv-Subnet-2",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Priv-Subnet-2",
              "Project": "Unity"
            },
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:subnet/subnet-006ed82a83395edb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.52.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006ed82a83395edb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979188186972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Pub-Subnet-1",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Pub-Subnet-1",
              "Project": "Unity"
            },
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:subnet/subnet-0ccc52d248d1ccecf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.52.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccc52d248d1ccecf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979188186972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Pub-Subnet-2",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Pub-Subnet-2",
              "Project": "Unity"
            },
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:subnet/subnet-0bcc85818ce5a7659",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcc85818ce5a7659",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979188186972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Pub-Subnet-4",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-Pub-Subnet-4",
              "Project": "Unity"
            },
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:vpc/vpc-0c241db231a406be9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.52.8.0/22",
            "default_network_acl_id": "acl-038915b54db57bb6a",
            "default_route_table_id": "rtb-0eaffdb90c177fd3d",
            "default_security_group_id": "sg-0a6db41101bbcc8aa",
            "dhcp_options_id": "dopt-004c5fb057641a75a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c241db231a406be9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eaffdb90c177fd3d",
            "owner_id": "979188186972",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-VPC",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-VPC",
              "Project": "Unity"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:979188186972:vpc-endpoint/vpce-0052fce3ffb2e63f9",
            "cidr_blocks": [
              "3.5.76.0/22",
              "16.12.96.0/20",
              "16.12.112.0/21",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "16.12.88.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0052fce3ffb2e63f9",
            "ip_address_type": "ipv4",
            "owner_id": "979188186972",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00e8ba8f033871d37",
              "rtb-040833f470d742920",
              "rtb-04a445b289c2e2e56",
              "rtb-077cc6b30507aaa90",
              "rtb-079bca8d907ff6723",
              "rtb-07f21adf632394e67",
              "rtb-0b663425eeb701116",
              "rtb-0c12576c2588c9c27"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-s3-endpoint",
              "Project": "Unity"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Unity-VPC-s3-endpoint",
              "Project": "Unity"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c241db231a406be9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.nat_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}